# ifc

./: .gitignore  Cargo.toml  NOTES.md  base.ixx  go.cmd  input.cpp  mk_ifc.cmd  real_stuff.h
c_macros/: Cargo.toml
c_macros/examples/: a.rs
c_macros/src/: lib.rs
gen_rust/: Cargo.toml
gen_rust/src/: config.rs  enums.rs  expr.rs  funcs.rs  lib.rs  options.rs  pp.rs  structs.rs  ty.rs  type_discovery.rs  vars.rs
gen_rust/src/config/: tests.rs
gen_rust/src/pp/: eval.rs
gen_rust/tests/: gen_rust_tests.rs
gen_rust/tests/enums/: checker.rs  enums_mod.ixx  mod.rs
gen_rust/tests/headers/: bar.h  checker.rs  foo.h  impl.cpp  is_wrapped.h  mod.rs  nested.h  wrapper.rs
gen_rust/tests/vars/: checker.rs  mod.rs  vars_mod.ixx
ifc/: Cargo.toml
ifc/src/: chart.rs  decl.rs  expr.rs  lib.rs  macros.rs  names.rs  ops.rs  parts.rs  pp.rs  types.rs  words.rs  zerocopy_utils.rs
ifcbindgen/: Cargo.toml
ifcbindgen/src/: main.rs  options.rs
ifcdump/: Cargo.toml
ifcdump/src/: main.rs  options.rs  parts.rs  pp.rs  summary.rs
ripper/: Cargo.toml
ripper/src/: decl.rs  error.rs  expr.rs  ifc.rs  lib.rs  macros.rs  main.rs  parts.rs  types.rs
ripper/src/ifc/: decl.rs  parts.rs  types.rs
rmeta_reader/: Cargo.toml  go.cmd
rmeta_reader/inputs/: hello.rs
rmeta_reader/src/: consts.rs  externs.rs  fns.rs  lib.rs  macros.rs  tests.rs  types.rs  utils.rs
