[package]
name = "gen_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
ifc = { path = "../ifc" }
anyhow = "1.0"
log = "0.4.17"
structopt = "*"
prettyplease = "0.1.18"
env_logger = "0.9.0"
toml = "0.5.9"
serde_derive = "1.0.144"
serde = "1.0.144"
regex = "1.6.0"
