[package]
name = "ifcbindgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
gen_rust = { path = "../gen_rust" }
ifc = { path = "../ifc" }
structopt = "0.3.26"
syn = { version = "1.0", features = ["full"] }
prettyplease = "0.1.18"
env_logger = "0.9.0"
log = "0.4.17"
