[package]
name = "ifcdump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ifc = { path = "../ifc" }
log = "0.4.17"
structopt = "0.3.26"
zerocopy = "0.6.1"
regex = "1.6.0"
env_logger = "0.9.0"
